# payroll-payments

./: Cargo.toml  LICENSE  README.md  cargo.toml
qt/: Cargo.toml  build.rs
qt/qml/: main.qml
qt/src/: cxxqt_object.rs  main.rs
slint/: Cargo.toml  README.md
slint/src/: main.rs
slint/ui/: appwindow.slint
