[package]
name = "payroll-payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
slint = "1.0"
production-calendar = { git = "https://github.com/xsayler/production-calendar.git" }
production-calendar-loader = { git = "https://github.com/xsayler/production-calendar-loader.git" }

[build-dependencies]
slint-build = "1.3.2"